apps/base/qbittorrent/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    spec:
      enableServiceLinks: false
      automountServiceAccountToken: false
      nodeSelector:
        kubernetes.io/hostname: hp-8200

      containers:
        - name: qbittorrent
          image: lscr.io/linuxserver/qbittorrent:5.2.4
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
            - name: bittorrent-tcp
              containerPort: 6881
              protocol: TCP
            - name: bittorrent-udp
              containerPort: 6881
              protocol: UDP
          volumeMounts:
            - name: config
              mountPath: /config
            - name: downloads
              mountPath: /downloads
          startupProbe:
            tcpSocket:
              port: http
            periodSeconds: 10
            failureThreshold: 30
          livenessProbe:
            tcpSocket:
              port: http
            periodSeconds: 30
            timeoutSeconds: 5
          readinessProbe:
            tcpSocket:
              port: http
            periodSeconds: 10
            timeoutSeconds: 5
          resources:
            requests:
              cpu: 50m
              memory: 256Mi
            limits:
              cpu: "1"
              memory: 1Gi
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: qbittorrent-config
        - name: downloads
          persistentVolumeClaim:
            claimName: qbittorrent-downloads
